--- a/SOC_Project_NN/nios_system/nios_system.cmp
+++ b/SOC_Project_NN/nios_system/nios_system.cmp
@@ -23,11 +23,6 @@
 			sram_0_external_interface_OE_N                     : out   std_logic;                                        -- OE_N
 			sram_0_external_interface_WE_N                     : out   std_logic;                                        -- WE_N
 			switches_external_connection_export                : in    std_logic_vector(17 downto 0) := (others => 'X'); -- export
-			tristate_conduit_bridge_0_out_tcm_address_out      : out   std_logic_vector(22 downto 0);                    -- tcm_address_out
-			tristate_conduit_bridge_0_out_tcm_read_n_out       : out   std_logic_vector(0 downto 0);                     -- tcm_read_n_out
-			tristate_conduit_bridge_0_out_tcm_write_n_out      : out   std_logic_vector(0 downto 0);                     -- tcm_write_n_out
-			tristate_conduit_bridge_0_out_tcm_data_out         : inout std_logic_vector(7 downto 0)  := (others => 'X'); -- tcm_data_out
-			tristate_conduit_bridge_0_out_tcm_chipselect_n_out : out   std_logic_vector(0 downto 0);                     -- tcm_chipselect_n_out
 			video_vga_controller_0_external_interface_CLK      : out   std_logic;                                        -- CLK
 			video_vga_controller_0_external_interface_HS       : out   std_logic;                                        -- HS
 			video_vga_controller_0_external_interface_VS       : out   std_logic;                                        -- VS
@@ -35,7 +30,12 @@
 			video_vga_controller_0_external_interface_SYNC     : out   std_logic;                                        -- SYNC
 			video_vga_controller_0_external_interface_R        : out   std_logic_vector(7 downto 0);                     -- R
 			video_vga_controller_0_external_interface_G        : out   std_logic_vector(7 downto 0);                     -- G
-			video_vga_controller_0_external_interface_B        : out   std_logic_vector(7 downto 0)                      -- B
+			video_vga_controller_0_external_interface_B        : out   std_logic_vector(7 downto 0);                     -- B
+			tristate_conduit_bridge_0_out_tcm_address_out      : out   std_logic_vector(22 downto 0);                    -- tcm_address_out
+			tristate_conduit_bridge_0_out_tcm_read_n_out       : out   std_logic_vector(0 downto 0);                     -- tcm_read_n_out
+			tristate_conduit_bridge_0_out_tcm_write_n_out      : out   std_logic_vector(0 downto 0);                     -- tcm_write_n_out
+			tristate_conduit_bridge_0_out_tcm_data_out         : inout std_logic_vector(7 downto 0)  := (others => 'X'); -- tcm_data_out
+			tristate_conduit_bridge_0_out_tcm_chipselect_n_out : out   std_logic_vector(0 downto 0)                      -- tcm_chipselect_n_out
 		);
 	end component nios_system;
 
